--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <div class="input-group f-class">
                 <div>
                     <label for="">Economy ($100)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <input id="ticket-count"  class="inp-style inp-width" type="number" name="">
                 </div>
                 <div class="plus-minus-btn">
-                    <p> <span>+</span> <span>-</span> </p>
+                    <p> <span id="ticket-incrase">+</span> <span>-</span> </p>
                 </div>
             </div>
             <div class="calculations">
