--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <input id="ticket-count"  class="inp-style inp-width" type="number" name="">
                 </div>
                 <div class="plus-minus-btn">
-                    <p> <span id="ticket-incrase">+</span> <span>-</span> </p>
+                    <p> <span id="ticket-incrase">+</span> <span id="ticket-decrase">-</span> </p>
                 </div>
             </div>
             <div class="calculations">
