--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="input-group f-class">
                 <div>
                     <label for="">First Class ($150)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <input class="inp-style inp-width" type="number" value="0" name="">
                 </div>
                 <div class="plus-minus-btn">
                     <p>+ -</p>
@@ -61,7 +61,7 @@
             <div class="input-group f-class">
                 <div>
                     <label for="">Economy ($100)</label>
-                    <input id="ticket-count"  class="inp-style inp-width" type="number" name="">
+                    <input id="ticket-count"  class="inp-style inp-width" type="number" value="0" name="">
                 </div>
                 <div class="plus-minus-btn">
                     <p> <span id="ticket-incrase">+</span> <span id="ticket-decrase">-</span> </p>
