--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
             <div class="input-group f-class">
                 <div>
                     <label for="">First Class ($150)</label>
-                    <input class="inp-style inp-width" type="number" value="0" name="">
+                    <input id="first-ticket-count" class="inp-style inp-width" type="number" value="0" name="">
                 </div>
                 <div class="plus-minus-btn">
-                    <p>+ -</p>
+                    <p><span id="first-ticket-incrase">+</span> <span id="first-ticket-decrase">-</span></p>
                 </div>
             </div>
             
             <div class="input-group f-class">
                 <div>
                     <label for="">Economy ($100)</label>
-                    <input id="ticket-count"  class="inp-style inp-width" type="number" value="0" name="">
+                    <input id="economy-ticket-count"  class="inp-style inp-width" type="number" value="0" name="">
                 </div>
                 <div class="plus-minus-btn">
-                    <p> <span id="ticket-incrase">+</span> <span id="ticket-decrase">-</span> </p>
+                    <p> <span id="economy-ticket-incrase">+</span> <span id="economy-ticket-decrase">-</span> </p>
                 </div>
             </div>
             <div class="calculations">
